force-app/main/default/objects/Calendly_Event_Type__c/Calendly_Event_Type__c.object-meta.xml
<CustomObject>
    <label>Calendly Event Type</label>
    <nameField>
        <label>Calendly Event Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Calendly Event Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>