force-app/main/default/objects/Calendly_Event_Type__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>This field indicates how or by who, Calendly bookings related to this event, are booked</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Internal Meeting Bookers</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Promotional Event</fullName>
            </value>
            <value>
                <fullName>Live at Lecture</fullName>
            </value>
            <value>
                <fullName>Personal Link</fullName>
            </value>
            <value>
                <fullName>Internal Event Booking</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>