force-app/main/default/objects/Calendly_Event_Type__c/fields/Default_UTM_Content__c.field-meta.xml
<CustomField>
    <fullName>Default_UTM_Content__c</fullName>
    <label>Default UTM Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>