force-app/main/default/objects/Calendly_Event_Type__c/fields/Default_UTM_Medium__c.field-meta.xml
<CustomField>
    <fullName>Default_UTM_Medium__c</fullName>
    <label>Default UTM Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UTM_Medium</valueSetName>
    </valueSet>
</CustomField>