force-app/main/default/objects/Calendly_Event_Type__c/fields/Default_UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>Default_UTM_Source__c</fullName>
    <label>Default UTM Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UTM_Source</valueSetName>
    </valueSet>
</CustomField>