force-app/main/default/objects/Calendly_Event_Type__c/fields/Default_UTM_Term__c.field-meta.xml
<CustomField>
    <fullName>Default_UTM_Term__c</fullName>
    <label>Default UTM Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>