force-app/main/default/objects/Calendly_Event_Type__c/fields/Event_Slug__c.field-meta.xml
<CustomField>
    <fullName>Event_Slug__c</fullName>
    <externalId>true</externalId>
    <label>Event Slug</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>