force-app/main/default/objects/Calendly_Event_Type__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>solo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>