force-app/main/default/objects/Calendly_Event_Type__c/fields/Question_1__c.field-meta.xml
<CustomField>
    <fullName>Question_1__c</fullName>
    <label>Question #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>