force-app/main/default/objects/Calendly_Event_Type__c/fields/Question_2__c.field-meta.xml
<CustomField>
    <fullName>Question_2__c</fullName>
    <label>Question #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>