force-app/main/default/objects/Calendly_Event_Type__c/fields/Time_of_Most_Recent_Booking__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Most_Recent_Booking__c</fullName>
    <label>Time of Most Recent Booking</label>
    <type>DateTime</type>
</CustomField>