force-app/main/default/objects/Calendly_Event_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Default_UTM_Source__c</columns>
    <columns>Default_UTM_Campaign__c</columns>
    <columns>Default_UTM_Medium__c</columns>
    <columns>Event_Slug__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>